--- a/span-template/.htaccess
+++ b/span-template/.htaccess
@@ -1,1 +1,1 @@
-ErrorDocument 404 C:\wamp\www\Portail-EDP-Sante\span-template\404.html
+ErrorDocument 404 http://localhost/Portail-EDP-Sante1/span-template/404.php
